# frappe-better-attach-control

./: .gitignore  LICENSE  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
frappe_better_attach_control/: __init__.py  hooks.py  modules.txt  version.py
frappe_better_attach_control/api/: __init__.py  attachment.py  common.py  field.py  file_manager.py  handler.py  website.py
frappe_better_attach_control/config/: __init__.py  desktop.py  docs.py
frappe_better_attach_control/frappe_better_attach_control/: __init__.py
frappe_better_attach_control/public/: build.json
frappe_better_attach_control/public/css/: better_attach.bundle.css
frappe_better_attach_control/public/js/: better_attach.bundle.js  better_attach.js  better_attach_image.bundle.js  better_attach_image_v13.bundle.js  better_attach_v13.bundle.js  better_attach_v14.bundle.js  better_attach_webform.js  better_attach_webform_v12.js  better_attach_webform_v13.js  better_uploader.bundle.js  better_uploader_v13.bundle.js
frappe_better_attach_control/public/js/controls/: attach.js  attach_image.js  better_attach.js  better_attach_image.js  better_attach_image_v13.js  better_attach_v13.js
frappe_better_attach_control/public/js/file_uploader/: FileUploader.vue
frappe_better_attach_control/public/js/filetypes/: audio.js  compressed.js  image.js  index.js  pdf.js  pdocument.js  presentation.js  spreadsheet.js  text.js  types.js  video.js  word.js
frappe_better_attach_control/public/js/integrations/: google_drive_picker.js
frappe_better_attach_control/public/js/uploader/: index.js
frappe_better_attach_control/setup/: install.py  uninstall.py
(+13 files in other folders)
